--- a/HTML-files/index.html
+++ b/HTML-files/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
-<!-- css and html lesson-->
+<!-- CSS and HTML lesson-->
 <html lang="en-ca">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Unit1-03 extra lesson">
+    <meta name="description" content="Unit1-04 lesson">
     <meta name="keywords" content="mths, ics2o">
     <meta name="author" content="Evgeny Vovk">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <title>fist website using CSS</title>
-    <a href="./CSS-files/styles.css" rel=""
+    <a href="./CSS-files/styles.css" rel="CSS styles">
   </head>
-  
+  <body>
+    <h1>My first website using CSS</h1>
+    <h2>CSS is important</h2>
+    <p>CSS is a programing language that every programer who wants to make a website should know.
+       CSS helps you to make your work look better and work easier, that's a file where you have all the styles.
+       Also, CSS helps you saving your time if you want to change your website style.
+       And finally, your code looks orginized with CSS.
+       </p>
+    <img src="./images/CSS.png">
+    <p>
+    <a href="./HTML-files/extra-index.html">My extra website is here</a>
+    </p>
+  </body>
 </html>
