Finishing first index and CSS

--- a/HTML-files/index.html
+++ b/HTML-files/index.html
@@ -10,7 +10,7 @@
     <title>fist website using CSS</title>
     <a href="./CSS-files/styles.css" rel="CSS styles">
   </head>
-  <body>
+  <body style="background-color:cyan">
     <h1>My first website using CSS</h1>
     <h2>CSS is important</h2>
     <p>CSS is a programing language that every programer who wants to make a website should know.
@@ -19,8 +19,8 @@
        And finally, your code looks orginized with CSS.
        </p>
     <img src="./images/CSS.png">
-    <p>
+    <h3>
     <a href="./HTML-files/extra-index.html">My extra website is here</a>
-    </p>
+    </h3>
   </body>
 </html>
