--- a/HTML-files/index.html
+++ b/HTML-files/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Evgeny Vovk">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <title>fist website using CSS</title>
-    <link href="./CSS-files/styles.css" rel="CSS styles">
+    <link href="./CSSfiles/styles.css" rel="CSS styles">
   </head>
   <body style="background-color:cyan">
     <h1>My first website using CSS</h1>
