--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <!-- CSS and HTML lesson-->
 <html lang="en-ca">
   <head>
@@ -8,7 +8,7 @@
     <meta name="author" content="Evgeny Vovk">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <title>fist website using CSS</title>
-    <link href="./CSS-files/styles.css" rel="CSS styles">
+    <link href="./css/styles.css" rel="CSS styles">
   </head>
   <body style="background-color:cyan">
     <h1>My first website using CSS</h1>
@@ -18,9 +18,9 @@
        Also, CSS helps you saving your time if you want to change your website style.
        And finally, your code looks orginized with CSS.
        </p>
-    <img src="./images/CSS.png" alt="CSS image">
+    <img src="./images/css.png" alt="CSS image">
     <h3>
-    <a href="./HTML-files/extra-index.html">My extra website is here</a>
+    <a href="./extra-index.html">My extra website is here</a>
     </h3>
   </body>
 </html>
