--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        Also, CSS helps you saving your time if you want to change your website style.
        And finally, your code looks orginized with CSS.
        </p>
-    <img src="./images/css.png" alt="CSS image">
+    <img src="./images/css.png" alt="CSS image" width="215px" hight="400px">
     <h3>
     <a href="./extra-index.html">My extra website is here</a>
     </h3>
