--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="author" content="Evgeny Vovk">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <title>fist website using CSS</title>
-    <link href="./css/styles.css" rel="CSS styles">
+    <link rel="CSS styles" href="./css/styles.css">
   </head>
-  <body style="background-color:cyan">
+  <body>
     <h1>My first website using CSS</h1>
     <h2>CSS is important</h2>
     <p>CSS is a programing language that every programer who wants to make a website should know.
