--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="mths, ics2o">
     <meta name="author" content="Evgeny Vovk">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <link rel="css styles" href="./css/styles.css">
-    <title>fist website using CSS</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>first website using CSS</title>
   </head>
   <body>
     <h1>My first website using CSS</h1>
