Finishing index.html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
        CSS helps you to make your work look better and work easier, that's a file where you have all the styles.
        Also, CSS helps you saving your time if you want to change your website style.
        And finally, your code looks orginized with CSS.
-       </p>
-    <img src="./images/css.png" alt="CSS image" width="215px" hight="400px">
+    </p>
+    <img src="./images/css.png" alt="CSS image" width="215px" hight="400px" class="center">
     <h3>
     <a href="./extra-index.html">My extra website is here</a>
     </h3>
