polishing index.html and css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>first website using CSS</title>
   </head>
-  <body>
+  <body style="background-color:cyan;">
     <h1>My first website using CSS</h1>
     <h2>CSS is important</h2>
     <p>CSS is a programing language that every programer who wants to make a website should know.
@@ -18,7 +18,7 @@
        Also, CSS helps you saving your time if you want to change your website style.
        And finally, your code looks orginized with CSS.
     </p>
-    <img src="./images/css.png" alt="CSS image" width="215px" hight="400px" class="center">
+    <img src="./images/css.png" alt="CSS image" width="215px" hight="400px" >
     <h3>
     <a href="./extra-index.html">My extra website is here</a>
     </h3>
