--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <body style="background-color:cyan;">
     <h1>My first website using CSS</h1>
     <h2>CSS is important</h2>
-    <p>CSS is a programing language that every programer who wants to make a website should know.
+    <p>CSS is a programming language that every programmer who wants to make a website should know.
        CSS helps you to make your work look better and work easier, that's a file where you have all the styles.
-       Also, CSS helps you saving your time if you want to change your website style.
-       And finally, your code looks orginized with CSS.
+       Also, CSS helps you save your time if you want to change your website style.
+       And finally, your code and your website looks orginized with CSS.
     </p>
     <center><img src="./images/css.png" alt="CSS image" width="215px" hight="400px" ></center>
     <h3>
