--- a/extra-index.html
+++ b/extra-index.html
@@ -11,7 +11,9 @@
       <title>extra website for unit1-04</title>
     </head>
   </html>
-    <center>
-      <body style="background-color: cyan;">
-      <h1>Attributes and and tags</h1>
-    </center>
+    
+    <body style="background-color: cyan;">
+      <center>
+        <h1>Attributes and and tags</h1>
+      </center>
+    </body>
