--- a/extra-index.html
+++ b/extra-index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <!--Second website for unit1-04(extra website)-->
-  <html lang="en-ca">
-    <head>
-      <meta charset="utf-8">
-      <meta name="description" content="Unit1-04 lesson extra">
-      <meta name="keywords" content="mths, ics2o">
-      <meta name="author" content="Evgeny Vovk">
-      <meta name="viewport" content="width=device-width, intial-scale=1.0">
-      <link rel="stylesheet" hred="./css/styles2.css">
-      <title>extra website for unit1-04</title>
-    </head>
-  </html>
-    
-    <body style="background-color: cyan;">
-      <center>
-        <h1>Attributes and and tags</h1>
-      </center>
-    </body>
+<html lang="en-ca">
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Unit1-04 lesson extra">
+    <meta name="keywords" content="mths, ics2o">
+    <meta name="author" content="Evgeny Vovk">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles2.css">
+    <title>extra website for unit1-04</title>
+  </head>
+  <body style="background-color: cyan;">
+    <center><h1>Attributes and tags</h1></center>
+      <p>Attributes: Attributes in coding are the additional inforamtion about elements. you add attributes after tags and they can do diffrent work like show where to go and where your pictures, files or videos are, they can also add more information about your website like, how to find your website, who is the owner and what country and language your website was made for.
+      </p>
+  </body>
+</html>
