--- a/extra-index.html
+++ b/extra-index.html
@@ -12,7 +12,12 @@
   </head>
   <body style="background-color: cyan;">
     <center><h1>Attributes and tags</h1></center>
-      <p>Attributes: Attributes in coding are the additional inforamtion about elements. you add attributes after tags and they can do diffrent work like show where to go and where your pictures, files or videos are, they can also add more information about your website like, how to find your website, who is the owner and what country and language your website was made for.
-      </p>
+    <h4>Attributes</h4>
+    <p>Attributes in coding are the additional inforamtion about elements. you add attributes after tags and they can do diffrent work like show where to go and where your pictures, files or videos are, they can also add more information about your website like, how to find your website, who is the owner and what country and language your website was made for.
+    </p>
+    <h4>Tags</h4>
+    <p>
+      Tags in coding are the start key of any code tags are making all the code and many of them have attributes and they are creating the whole page.
+    </p>
   </body>
 </html>
