--- a/extra-index.html
+++ b/extra-index.html
@@ -19,5 +19,49 @@
     <p>
       Tags in coding are the start key of any code tags are making all the code and many of them have attributes and they are creating the whole page.
     </p>
+    <h4>Some examples</h4>
+    <h5>A list for tags:</h5>
+    <ul>
+      <li>DOCTYPE</li>
+      <li>p</li>
+      <li>img</li>
+      <li>link</li>
+      <li>head</li>
+    </ul>
+    <h5>A list for attributes:</h5>
+    <ul>
+      <li>href</li>
+      <li>alt</li>
+      <li>width/hight</li>
+      <li>lang</li>
+      <li>rel</li>
+    </ul>
+    <h5>An example in a table:</h5>
+    <table>
+      <tr>
+        <th>Tags</th>
+        <th>Attributes</th>
+      </tr>
+      <tr>
+        <td>img</td>
+        <td>href</td>
+      </tr>
+      <tr>
+        <td>body</td>
+        <td>style</td>
+      </tr>
+      <tr>
+        <td>DOCTYPE</td>
+        <td>lang</td>
+      </tr>
+      <tr>
+        <td>p</td>
+        <td>style</td>
+      </tr>
+      <tr>
+        <td>link</td>
+        <td>rel</td>
+      </tr>
+    </table>
   </body>
 </html>
