--- a/extra-index.html
+++ b/extra-index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/styles2.css">
     <title>extra website for unit1-04</title>
   </head>
-  <body style="background-color: cyan;">
+  <body>
     <center><h1>Attributes and tags</h1></center>
     <h4>Attributes</h4>
     <p>Attributes in coding are the additional information about elements. you add attributes after tags and they can do different work like show where to go and where your pictures, files or videos are, they can also add more information about your website like, how to find your website, who is the owner and what country and language your website was made for.
